# dastardly-daemon

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ENFORCEMENT.md  Makefile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: build_test_master.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  CODE_REVIEW_UPDATED.md  ENFORCEMENT_REFACTORING.md  ENFORCEMENT_REFACTORING_README.md  README.md
examples/: enforcement_lifecycle.rs  enforcement_test.rs
src/: commands.rs  daemon_response.rs  data.rs  data_ext.rs  enforcement.rs  enforcement_old.rs  handlers.rs  lib.rs  llm.rs  logging.rs  main.rs  status.rs
src/enforcement_new/: action.rs  error.rs  handler.rs  mod.rs  record.rs  service.rs  store.rs
